Dired buffers.

+++
*** In wdired, when editing files to contain slash characters,
the resulting directories are automatically created.  Whether to do
this is controlled by the 'wdired-create-parent-directories' variable.

+++
*** 'W' is now bound to 'browse-url-of-dired-file', and is useful for
viewing HTML files and the like.

---
** html2text is now marked obsolete.

---
** smerge-refine-regions can refine regions in separate buffers

---
** Info menu and index completion uses substring completion by default.
This can be customized via the info-menu category in
completion-category-override.

+++
** The ancestor buffer is shown by default in 3-way merges.
A new option ediff-show-ancestor and a new toggle
ediff-toggle-show-ancestor.

---
** TeX: Add luatex and xetex as alternatives to pdftex

** Electric-Buffer-menu

+++
*** Key 'U' is bound to 'Buffer-menu-unmark-all' and key 'M-DEL' is
bound to 'Buffer-menu-unmark-all-buffers'.

** bs

---
*** Two new commands 'bs-unmark-all', bound to 'U', and
'bs-unmark-previous', bound to <backspace>.

** Buffer-menu

+++
*** Two new commands 'Buffer-menu-unmark-all', bound to 'U' and
'Buffer-menu-unmark-all-buffers', bound to 'M-DEL'.

---
** Checkdoc

*** 'checkdoc-arguments-in-order-flag' now defaults to nil.

** Gnus

---
*** The .newsrc file will now only be saved if the native select
method is an NNTP select method.

+++
*** A new command for sorting articles by readedness marks has been
added: 'C-c C-s C-m C-m'.

** Ibuffer

---
*** New command 'ibuffer-jump'.

---
*** New filter commands 'ibuffer-filter-by-basename',
'ibuffer-filter-by-file-extension', 'ibuffer-filter-by-directory',
'ibuffer-filter-by-starred-name', 'ibuffer-filter-by-modified'
and 'ibuffer-filter-by-visiting-file'; bound respectively
to '/b', '/.', '//', '/*', '/i' and '/v'.

---
*** Two new commands 'ibuffer-filter-chosen-by-completion'
and 'ibuffer-and-filter', the second bound to '/&'.

---